--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>3D Print Studio - Custom 3D Printing Service</title>
+    <title>S.A.M.S 3D Print Studio - Custom 3D Printing Service</title>
     <meta name="description" content="Turn your ideas into reality with custom 3D printing. Gaming miniatures, phone cases, and personalized creations. Fast, affordable, and epic results!" />
-    <meta name="author" content="3D Print Studio" />
+    <meta name="author" content="S.A.M.S 3D Print Studio" />
 
-    <meta property="og:title" content="3D Print Studio - Custom 3D Printing Service" />
+    <meta property="og:title" content="S.A.M.S 3D Print Studio - Custom 3D Printing Service" />
     <meta property="og:description" content="Turn your ideas into reality with custom 3D printing. Gaming miniatures, phone cases, and personalized creations." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
